--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -74,9 +74,9 @@ jobs:
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        app-name: "SoftwareSecurity1"
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6ef031e78264483cb9d174499f841819 }}
+        package: .
         run: |
           cd server
           npm start
